--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,11 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": [
+      "@vitest/browser/providers/playwright"
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "vite.config.js"],
   "exclude": ["node_modules"]
 }
