--- a/.github/workflows/test_converage.yml
+++ b/.github/workflows/test_converage.yml
@@ -1,3 +1,4 @@
+# https://github.com/marketplace/actions/vitest-coverage-report
 name: "Test"
 on:
   pull_request:
@@ -20,7 +21,7 @@ jobs:
           node-version: "20.x"
       - name: "Install Deps"
         run: npm install
-      - name: "Test"
+      - name: "Start Vitest"
         run: npx vitest --coverage.enabled true
       - name: "Report Coverage"
         # Set if: always() to also generate the report if tests are failing
