--- a/.github/workflows/test_converage.yml
+++ b/.github/workflows/test_converage.yml
@@ -30,5 +30,5 @@ jobs:
         uses: davelosert/vitest-coverage-report-action@v2
         with:
           name: "vitest-coverage"
-          json-summary-path: "./coverage/coverage-summary.json"
-          json-final-path: "./coverage/coverage-final.json"
+          json-summary-path: "../../coverage/coverage-summary.json"
+          json-final-path: "../../coverage/coverage-final.json"
