--- a/.github/workflows/test_converage.yml
+++ b/.github/workflows/test_converage.yml
@@ -33,3 +33,4 @@ jobs:
           working-directory: "./"
           json-summary-path: "coverage/coverage-summary.json"
           json-final-path: "coverage/coverage-final.json"
+          file-coverage-mode: 'all',
