feat: change vitest run command

--- a/.github/workflows/test_converage.yml
+++ b/.github/workflows/test_converage.yml
@@ -22,7 +22,7 @@ jobs:
       - name: "Install Deps"
         run: npm install
       - name: "Start Vitest"
-        run: npx vitest --coverage.enabled true
+        run: npx vitest --coverage.enabled true --coverage.provider=v8 --coverage.reporter=json-summary --coverage.reporter=json
       - name: "Report Coverage"
         # Set if: always() to also generate the report if tests are failing
         # Only works if you set `reportOnFailure: true` in your vite config as specified above
