--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:msw": "cross-env IS_MSW=true && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -20,6 +21,7 @@
     "@playwright/test": "^1.41.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -27,12 +29,19 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "@vitest/coverage-v8": "^1.3.0",
     "autoprefixer": "^10.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "jsdom": "^24.0.0",
+    "msw": "^2.0.14",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vitest": "^1.3.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
