--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:msw": "cross-env IS_MSW=true && next dev",
+    "dev:msw": "env-cmd -f environments/.env.msw next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,6 +13,7 @@
     "test:e2e": "npx playwright test --ui"
   },
   "dependencies": {
+    "env-cmd": "^10.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -29,7 +30,6 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "@vitest/coverage-v8": "^1.3.0",
     "autoprefixer": "^10.0.1",
-    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "jsdom": "^24.0.0",
